--- a/MicroNet.Tools.Annotations.Processors/src/main/resources/ParameterCodeTemplate.vm
+++ b/MicroNet.Tools.Annotations.Processors/src/main/resources/ParameterCodeTemplate.vm
@@ -1,5 +1,5 @@
 
-public enum ${name}ParameterCode {
+public enum ParameterCode {
 #foreach($entry in $entries)
      ${entry}#if( $foreach.hasNext ),#{else};#end
      
